# CelesteMagicTimer

./: .gitignore  LICENSE  Makefile  README.md  requirements.txt  setup.cfg
timer/: celeste_timer.py  death_counter.py  edit_splits.py  event.py  full_splits.py  json_timer.py  make_chapter_splits.py  make_room_splits.py  make_segment_splits.py  stream.py
timer_data/: anypercent.route  asides_anypercent.json  asides_anypercent.route
tracer/: .gitignore  Makefile  celeste_tracer.c  celeste_tracer_loop  celeste_tracer_loop_mine.c
