[metadata]
name = Celeste Magic Timer
version = 0.1

[options]
package_dir =
    celeste_magic_timer = timer

[options.entry_points]
console_scripts =
    celeste_timer = celeste_magic_timer.celeste_timer:_main
    celeste_edit_splits = celeste_magic_timer.edit_splits:main
    celeste_event = celeste_magic_timer.event:main
    celeste_full_splits = celeste_magic_timer.full_splits:main
